--- a/css/main.css
+++ b/css/main.css
@@ -411,6 +411,7 @@ img.pull-left {
 @media only screen and (max-width:400px) {
 	.bgrid {
 		padding: 0;
+		margin: 0;
 	}
 }
 
@@ -1838,6 +1839,7 @@ header .logo a {
 	transition: all 0.5s ease-in-out;
 	position: relative;
 	left: -100%;
+	margin: 10px;
 }
 
 #portfolio .folio-title {
@@ -2595,5 +2597,13 @@ footer .copyright span:last-child::after {
 #go-top a:hover {
 	background: #000000;
 }
+
+.item-wrap img {
+	opacity: 30%;
+	padding: 20%;
+	width: 500px;
+	height: 400px;
+}
+
 
 /*# sourceMappingURL=main.css.map */
